force-app/main/default/objects/Campaign_Asset_Link__c/Campaign_Asset_Link__c.object-meta.xml
<CustomObject>
    <description>Asset links for a Marketing Campaign</description>
    <label>Campaign Asset Link</label>
    <nameField>
        <displayFormat>CAL-{000000}</displayFormat>
        <label>Campaign Asset Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Asset Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>