force-app/main/default/objects/Campaign_Asset_Link__c/fields/Asset_Link__c.field-meta.xml
<CustomField>
    <fullName>Asset_Link__c</fullName>
    <description>a link to the asset content</description>
    <inlineHelpText>a link to the asset content</inlineHelpText>
    <label>Asset Link</label>
    <type>Url</type>
</CustomField>