force-app/main/default/objects/Campaign_Asset_Link__c/fields/Asset_Title__c.field-meta.xml
<CustomField>
    <fullName>Asset_Title__c</fullName>
    <description>The title of the report or asset</description>
    <inlineHelpText>The title of the report or asset</inlineHelpText>
    <label>Asset Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>