force-app/main/default/objects/Campaign_Asset_Link__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the asset to the associated brand</description>
    <inlineHelpText>Links the asset to the associated brand</inlineHelpText>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select brands for asset links</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Asset Links and Reports</relationshipLabel>
    <relationshipName>Campaign_Asset_Links</relationshipName>
    <type>Lookup</type>
</CustomField>