force-app/main/default/objects/Campaign_Asset_Link__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <description>Link to Marketing Campaign</description>
    <inlineHelpText>Link to Marketing Campaign</inlineHelpText>
    <label>Marketing Campaign</label>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Campaign Asset Links and Reports</relationshipLabel>
    <relationshipName>Campaign_Asset_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>